# vllm-yulan-hybrid-plugin

./: README.md  pyproject.toml
docs/: note-vllm-custom-model.md
vllm_qwen3_next_plugin/: __init__.py  vllm_qwen3_next_0_10_2.py  vllm_qwen3_next_0_11_0.py  vllm_qwen3_next_mtp_0_10_2.py  vllm_qwen3_next_mtp_0_11_0.py
vllm_yulan_hybrid_plugin/: __init__.py  configuration_yulan_hybrid.py
vllm_yulan_hybrid_plugin/versions/: __init__.py  v0_10_2.py  v0_10_2_mtp.py  v0_11_0.py  v0_11_0_mtp.py
