[build-system]  
requires = ["setuptools>=64", "wheel"]  
build-backend = "setuptools.build_meta"  
  
[project]  
name = "vllm_qwen3_next_plugin"  
version = "0.1"  
description = "vLLM Qwen3Next model plugin with custom support."
dependencies = [
    "vllm>=0.10.2,<=0.11.0"
]
  
[project.entry-points."vllm.general_plugins"]  
register_qwen3_next_model = "vllm_qwen3_next_plugin:register"  
  
[tool.setuptools.packages.find]  
where = ["."]